--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+          <!-- 修改适应手机 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />    <!-- Google fonts-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" /> 
+		
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>resume - Justin Li</title>
@@ -91,7 +93,7 @@
  <!-- Ken 1024--				
 					<video autoplay loop muted src="assets/img/sample002.MP4"></video><!-- 视频背景图就这一行 muted 一定要保留，去掉视频中的音频-->
 				<video autoplay loop muted>
-    <source src="assets/sample002.MP4" type="video/mp4">
+    <source src="assets/img/sample002.MP4" type="video/mp4">
 </video>
 					
 					
