--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
  <!-- Ken 1024--				
 					<video autoplay loop muted src="assets/img/sample002.MP4"></video><!-- 视频背景图就这一行 muted 一定要保留，去掉视频中的音频-->
 				<video autoplay loop muted>
-    <source src="assets/sample002.MOV" type="video/mov">
+    <source src="https://github.com/justin-lizeting/Justin/blob/main/assets/img/sample002.mp4" type="video/mp4">
 </video>
 					
 					
