--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <!-- Ken 1025--以上版本3做了手机H5适配-->	
 
 
-<video preload="" muted="muted" autoplay="autoplay" loop="loop" x5-playsinline="" playsinline="" webkit-playsinline="" x5-video-player-type="h5"><source src="assets/img/sample002.MP4" type="video/mp4">
+<video preload="" muted="muted" autoplay="autoplay" loop="loop" x5-playsinline="" playsinline="" webkit-playsinline="" x5-video-player-type="h5"><source src="assets/img/sample002.mp4" type="video/mp4">
                 Your brower not support video play!
             </video>
 
