--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 
 <div class="row mt-5">
 	<div class="co2">
-		<div class="carousel slide1" data-ride="carousel1" id="indicators">
+		<div class="carousel slide1" data-ride="carousel1" id="indicators1">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
 					<img src="assets/img/5.jpg" class="img-fluid">
@@ -335,18 +335,18 @@
 			</div>
 
 			<!-- 添加左右箭头 -->
-			<a href="#indicators" class="carousel-control-prev" data-slide="prev">
+			<a href="#indicators1" class="carousel-control-prev" data-slide="prev">
 				<span class="carousel-control-prev-icon"></span>
 			</a>
-			<a href="#indicators" class="carousel-control-next" data-slide="next">
+			<a href="#indicators1" class="carousel-control-next" data-slide="next">
 				<span class="carousel-control-next-icon"></span>
 			</a>
 
 			<!-- 添加指示器 -->
 			<ol class="carousel-indicators">
-				<li data-target="#indicators" data-slide-to="0" class="active"></li>
-				<li data-target="#indicators" data-slide-to="3"></li>
-				<li data-target="#indicators" data-slide-to="4"></li>
+				<li data-target="#indicators1" data-slide-to="0" class="active"></li>
+				<li data-target="#indicators1" data-slide-to="3"></li>
+				<li data-target="#indicators1" data-slide-to="4"></li>
 			</ol>
 		</div>
 	</div>
