--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
 		<script src="https://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
 		
-		
+
+  <link href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
+
+
+
+	
 <script>
 
 
@@ -208,22 +214,71 @@
 	 <div style="width:800px;margin:auto;overflow:hidden">  	
   <div class="imgs" style="width:500px;">	
 
+
+
+<!-- 轮播 -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+   <!-- 指示符 -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+	<button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+  </div>
+  
+  <!-- 轮播图片 -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/img/1.jpg" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/2.jpg" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/3.jpg" class="d-block" style="width:100%">
+    </div>
+	    <div class="carousel-item">
+      <img src="assets/img/4.jpg" class="d-block" style="width:100%">
+    </div>
+  </div>
+  
+  <!-- 左右切换按钮 -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
+	</div>
+</div>
+
+
+
+
+
+
+ <!-- Ken--
+
+
 <div class="row mt-5">
 	<div class="col">
 		<div class="carousel slide" data-ride="carousel" id="indicators">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="assets/img/1.jpg" class="img-fluid">
+					<img src="assets/img/1.jpg" class="img-fluid"style="width:100%">
 				</div>
 				<div class="carousel-item">
-					<img src="assets/img/2.jpg" class="img-fluid">
+					<img src="assets/img/2.jpg" class="img-fluid"style="width:100%">
 				</div>
 				<div class="carousel-item">
-					<img src="assets/img/3.jpg" class="img-fluid">
+					<img src="assets/img/3.jpg" class="img-fluid"style="width:100%">
 				</div>
 			</div>
 
-			<!-- 添加左右箭头 -->
+			<!-- 添加左右箭头 --
 			<a href="#indicators" class="carousel-control-prev" data-slide="prev">
 				<span class="carousel-control-prev-icon"></span>
 			</a>
@@ -231,7 +286,7 @@
 				<span class="carousel-control-next-icon"></span>
 			</a>
 
-			<!-- 添加指示器 -->
+			<!-- 添加指示器 --
 			<ol class="carousel-indicators">
 				<li data-target="#indicators" data-slide-to="0" class="active"></li>
 				<li data-target="#indicators" data-slide-to="1"></li>
@@ -240,7 +295,7 @@
 		</div>
 	</div>
 </div>
-
+-->
 
           </section>    
 		
@@ -335,6 +390,53 @@
 	 <div style="width:800px;margin:auto;overflow:hidden">  	
   <div class="imgs1" style="width:500px;">	
 
+
+<!-- 轮播 -->
+<div id="demo1" class="carousel slide" data-bs-ride="carousel">
+
+
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+	<button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+  </div>
+  
+  <!-- 轮播图片 -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/img/5.jpg" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/6.jpg" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/7.jpg" class="d-block" style="width:100%">
+    </div>
+	    <div class="carousel-item">
+      <img src="assets/img/8.jpg" class="d-block" style="width:100%">
+    </div>
+  </div>
+  
+  <!-- 左右切换按钮 -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo1" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo1" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
+	</div>
+</div>
+
+
+
+
+
+
+<!-- Ken 1024-
+
 <div class="row mt-5">
 	<div class="co2">
 		<div class="carousel slide1" data-ride="carousel1" id="indicators1">
@@ -350,7 +452,7 @@
 				</div>
 			</div>
 
-			<!-- 添加左右箭头 -->
+			<!-- 添加左右箭头 --
 			<a href="#indicators1" class="carousel-control-prev" data-slide="prev">
 				<span class="carousel-control-prev-icon"></span>
 			</a>
@@ -358,7 +460,7 @@
 				<span class="carousel-control-next-icon"></span>
 			</a>
 
-			<!-- 添加指示器 -->
+			<!-- 添加指示器 --
 			<ol class="carousel-indicators">
 				<li data-target="#indicators1" data-slide-to="0" class="active"></li>
 				<li data-target="#indicators1" data-slide-to="3"></li>
@@ -367,6 +469,8 @@
 		</div>
 	</div>
 </div>
+-->
+
 
           </section>    
 		 
